[package]
name = "tuja"
version = "0.1.0"
edition = "2021"
authors = ["Marcin Sas-Szymański"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
schemars = "0.8.15"
tui = "0.19.0"
anyhow = "1.0.75"
thiserror = "1.0.49"
